--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,7 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_APP_KEY}}
-          heroku_app_name: poxeapp
+          heroku_app_name: "poxeapp"
           healthcheck: "https://poxeapp.herokuapp.com/health"
           checkstring: "ok"
+          heroku_email: "niilo.kurki@hotmail.fi"
