--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           healthcheck: "https://poxeapp.herokuapp.com/health"
           checkstring: "ok"
           heroku_email: "niilo.kurki@hotmail.fi"
+          rollbackonhealthcheckfailed: true
