--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,7 +59,7 @@ jobs:
         #success
       - uses: 8398a7/action-slack@v3
         with:
-          status: 'success'
+          status: custom
           fields: commit,author,took
           custom_payload: |
             {
